fix css p2, admin/clients responsive

--- a/public/styles/components/_adminBookingsPage.scss
+++ b/public/styles/components/_adminBookingsPage.scss
@@ -12,6 +12,10 @@
         height: fit-content;
         padding: 1rem;        
         align-items: baseline;
+
+        .l-side{
+            display: flex;
+        }
     }
 
     .wraper{
