--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -609,11 +609,13 @@ header .navItem {
 }
 
 .admin-clients {
-  display: grid;
-  grid-template-columns: 37% 57%;
+  display: flex;
   padding: 20px;
   width: 100%;
-  justify-content: space-around;
+  justify-content: space-between;
+}
+.admin-clients .client-search {
+  flex-grow: 2;
 }
 
 .form-users {
@@ -665,6 +667,7 @@ header .navItem {
   align-items: center;
 }
 .user-list-items #arrow {
+  cursor: pointer;
   width: 35px;
   height: 35px;
   text-align: center;
@@ -676,6 +679,7 @@ header .navItem {
   font-weight: bolder;
 }
 .classSelected #arrow {
+  cursor: pointer;
   visibility: hidden;
   position: relative;
 }
@@ -692,33 +696,14 @@ header .navItem {
   border-radius: 50%;
 }
 
-.client-info {
-  display: flex;
-  flex-direction: column;
-  margin: 0 10px 10px 40px;
-}
-
 .client-chart {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  border-bottom: 1px solid #646262;
   padding: 0;
-  /*     
-     svg{
-         height: 150px;
-     }
-  */
 }
 .client-chart h3 {
   margin: 0 0 30px 0;
-}
-.client-chart rect {
-  /*         height: 150px;
-  */
-}
-.client-chart rect g:first-of-type {
-  height: 100px;
 }
 
 .active-booking-card {
@@ -729,7 +714,6 @@ header .navItem {
   justify-content: space-around;
   align-items: flex-start;
   background: #edecf4;
-  margin: 10px 0;
   border-radius: 20px;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   padding: 1rem;
@@ -769,33 +753,10 @@ header .navItem {
 .active-booking-card .wraper {
   width: 100%;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
   border-radius: 20px;
-}
-.active-booking-card .active-bookings-numbers {
-  width: 50px;
-  height: 60px;
-  border-right: 1px solid #646263;
-  color: #646262;
-  padding: 0 0.8rem 0 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.active-booking-card .active-bookings-numbers p:first-child {
-  font-size: 18px;
-  margin: 0;
-  font-weight: 300;
-}
-.active-booking-card .active-bookings-numbers p:last-child {
-  font-size: 15px;
-  margin: 0;
-}
-.active-booking-card .active-bookings-details {
-  display: flex;
-  flex-direction: column;
-  width: 270px;
 }
 .active-booking-card .active-bookings-details p {
   margin: 0;
@@ -848,9 +809,9 @@ header .navItem {
 }
 .client-subscriptions .comboform {
   display: flex;
-  flex-direction: row;
-  width: 100%;
+  flex-wrap: wrap;
   justify-content: space-between;
+  width: 100%;
 }
 .client-subscriptions .subscriptionform {
   display: flex;
@@ -900,15 +861,64 @@ header .navItem {
   width: 225px;
   margin: 0 10px 20px 0;
 }
+.client-subscriptions .adminsubsection .admin-subscription-card .arrow {
+  align-self: self-end;
+  margin: 1rem;
+  margin-top: 0rem;
+  cursor: pointer;
+}
 .client-subscriptions .adminsubsection .admin-subscription-card h4 {
   text-align: center;
+  margin-bottom: 0.5rem;
 }
 .client-subscriptions .adminsubsection .admin-subscription-card p {
   margin: 10px;
-  font-size: 15px;
 }
 .client-subscriptions .adminsubsection .admin-subscription-card img {
   margin: 10px 0;
+}
+
+.client-info {
+  display: flex;
+  flex-direction: column;
+  margin-left: 2rem;
+}
+.client-info h3 {
+  margin: 0rem;
+}
+.client-info hr {
+  margin: 2rem 0rem;
+}
+.client-info .bellowChart .client-active-booking {
+  margin: 2rem 0rem;
+}
+.client-info .bellowChart .active-booking-card {
+  margin: 1.5rem 0rem;
+}
+.client-info .bellowChart .active-booking-card .l-side {
+  display: flex;
+}
+.client-info .bellowChart .active-booking-card .active-bookings-details {
+  display: flex;
+  flex-direction: column;
+  padding-left: 1rem;
+}
+.client-info .bellowChart .active-booking-card .active-bookings-numbers {
+  border-right: 1px solid #646263;
+  color: #646262;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  padding-right: 1rem;
+}
+.client-info .bellowChart .active-booking-card .active-bookings-numbers p:first-child {
+  font-size: 18px;
+  margin: 0;
+  font-weight: 300;
+}
+.client-info .bellowChart .active-booking-card .active-bookings-numbers p:last-child {
+  font-size: 15px;
+  margin: 0;
 }
 
 .admin-bookings {
@@ -925,6 +935,9 @@ header .navItem {
   height: fit-content;
   padding: 1rem;
   align-items: baseline;
+}
+.admin-bookings .active-booking-card .l-side {
+  display: flex;
 }
 .admin-bookings .wraper {
   display: flex;
@@ -996,22 +1009,14 @@ header .navItem {
     flex-direction: column;
   }
 
-  .client-search {
-    width: 450px;
-    align-self: center;
-  }
-
   .client-info {
+    margin-left: 0rem;
+  }
+
+  .client-search {
+    width: 100%;
     align-self: center;
-    margin: 40px 0 0 0;
-  }
-
-  .client-chart {
-    align-items: center;
-  }
-
-  .active-booking-card {
-    width: 75%;
+    margin-bottom: 2rem;
   }
 
   .comboform {
@@ -1089,10 +1094,18 @@ header .navItem {
     margin: 0rem 1rem;
   }
 }
-@media (max-width: 400px) {
+@media (max-width: 411px) {
   .subscription-card {
     width: 100%;
     padding: 1rem;
+  }
+
+  .active-booking-card .active-bookings-status {
+    display: flex;
+    flex-direction: column;
+    flex-direction: row;
+    margin: 1rem 0rem;
+    width: 100%;
   }
 
   .admin-layout .header {
@@ -1125,6 +1138,10 @@ header .navItem {
   .date-container {
     min-height: fit-content;
     margin: 2rem 0rem;
+  }
+
+  .admin-clients {
+    padding: 10px;
   }
 }
 @media (max-width: 350px) {
