--- a/public/styles/components/_clientsDetails.scss
+++ b/public/styles/components/_clientsDetails.scss
@@ -1,20 +1,16 @@
 .admin-clients {
-  display: grid;
-  grid-template-columns: 37% 57%;
-
+  display: flex;
   padding: 20px;
   width: 100%;
-  justify-content: space-around;
+  justify-content: space-between;
+  .client-search{
+    flex-grow: 2;
+  }
 }
-
-// .client-search {
-//   //margin: 0 0 10px 20px;
-// }
 
 .form-users {
   display: flex;
   flex-direction: row;
-  // border:1px solid grey;
   padding: 2px;
   border: 1px solid $darkGreyWriting;
   height: 51px;
@@ -67,6 +63,7 @@
   }
 
   #arrow {
+    cursor: pointer;
     width: 35px;
     height: 35px;
     text-align: center;
@@ -79,6 +76,7 @@
   font-weight: bolder;
 
   #arrow {
+    cursor: pointer;
     visibility: hidden;
     position: relative;
   }
@@ -97,35 +95,14 @@
   }
 }
 
-.client-info {
-  display: flex;
-  flex-direction: column;
-  margin: 0 10px 10px 40px;
-}
-
 .client-chart {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  border-bottom: 1px solid $darkGreyWriting;
   padding: 0;
 
   h3 {
     margin: 0 0 30px 0;
-  }
-
-  /*     
-    svg{
-        height: 150px;
-    }
- */
-  rect {
-
-    /*         height: 150px;
- */
-    g:first-of-type {
-      height: 100px;
-    }
   }
 }
 
@@ -137,30 +114,29 @@
   justify-content: space-around;
   align-items: flex-start;
   background: #edecf4;
-  margin: 10px 0;
   border-radius: 20px;
   box-shadow: 0px 4px 4px 0px rgb(0 0 0 / 25%);
   padding: 1rem;
-  
+
   .class-coverage-arrow {
     display: flex;
     align-items: center;
     cursor: pointer;
 
-    .class-coverage-arrow:hover{
-      .class-coverag p{
+    .class-coverage-arrow:hover {
+      .class-coverag p {
         font-weight: bold;
       }
     }
 
-    p{
+    p {
       margin: 0rem;
       margin-right: 0.5rem;
       font-weight: 500;
     }
   }
-  
-  .class-coverage{
+
+  .class-coverage {
     margin-top: 1rem;
   }
 
@@ -187,38 +163,14 @@
   .wraper {
     width: 100%;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
     border-radius: 20px;
   }
 
-  .active-bookings-numbers {
-    width: 50px;
-    height: 60px;
-    border-right: 1px solid #646263;
-    color: $darkGreyWriting;
-    padding: 0 0.8rem 0 0;;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-    p:first-child {
-      font-size: 18px;
-      margin: 0;
-      font-weight: 300;
-    }
-
-    p:last-child {
-      font-size: 15px;
-      margin: 0;
-    }
-  }
 
   .active-bookings-details {
-    display: flex;
-    flex-direction: column;
-    width: 270px;
-
     p {
       margin: 0;
       font-size: 19px;
@@ -281,9 +233,9 @@
 
   .comboform {
     display: flex;
-    flex-direction: row;
-    width: 100%;
+    flex-wrap: wrap;
     justify-content: space-between;
+    width: 100%;
   }
 
   .subscriptionform {
@@ -340,13 +292,20 @@
       width: 225px;
       margin: 0 10px 20px 0;
 
+      .arrow{
+        align-self: self-end;
+        margin: 1rem;
+        margin-top: 0rem;
+        cursor: pointer;
+      }
+
       h4 {
         text-align: center;
+        margin-bottom: 0.5rem;
       }
 
       p {
         margin: 10px;
-        font-size: 15px;
       }
 
       img {
