fix css p3, admin/bookings responsive

--- a/public/styles/media.scss
+++ b/public/styles/media.scss
@@ -77,6 +77,10 @@
     width: 100%;
   }
 
+  .admin-bookings .active-booking-card{
+    min-width: 100%
+  }
+
   .week_schedule-form {
     margin: 0rem;
     min-width: 100%;
