--- a/public/styles/components/_clientInfo.scss
+++ b/public/styles/components/_clientInfo.scss
@@ -32,6 +32,7 @@
 
             .active-bookings-numbers {
                 border-right: 1px solid #646263;
+                max-height: 60px;
                 color: #646262;
                 display: flex;
                 flex-direction: column;
@@ -42,12 +43,12 @@
                     font-size: 18px;
                     margin: 0;
                     font-weight: 300;
-                  }
-              
-                  p:last-child {
+                }
+
+                p:last-child {
                     font-size: 15px;
                     margin: 0;
-                  }
+                }
             }
         }
     }
