--- a/public/styles/components/_weekSchedulePage.scss
+++ b/public/styles/components/_weekSchedulePage.scss
@@ -4,16 +4,24 @@
     justify-content: center;
     flex-wrap: wrap-reverse;
     height: fit-content;
-    min-height: 750px;
     margin-bottom: 30px;
 
     .wrapper {
         display: flex;
         align-items: flex-start;
-        width: 800px;
         justify-content: space-between;
         flex-wrap: wrap-reverse;
     }
+}
+
+.dateRange .rdrMonth{
+    min-width: 430px;
+    padding: 0 2em 2em 2em;
+}
+
+.rdrMonthAndYearPickers{
+    font-size: 18px;
+    color: #6c6c6c;
 }
 
 .week-schedule.page {
