--- a/public/styles/media.scss
+++ b/public/styles/media.scss
@@ -9,7 +9,8 @@
     display: flex;
     flex-direction: column;
   }
-  .client-info{
+
+  .client-info {
     margin-left: 0rem;
   }
 
@@ -77,7 +78,19 @@
     width: 100%;
   }
 
-  .admin-bookings .active-booking-card{
+  .date-container {
+    width: 100%;
+
+    .wrapper {
+      width: 100%;
+    }
+
+    .dateRange .rdrMonth {
+      min-width: 100%
+    }
+  }
+
+  .admin-bookings .active-booking-card {
     min-width: 100%
   }
 
@@ -115,6 +128,7 @@
     width: 100%;
     padding: 1rem;
   }
+
   .active-booking-card .active-bookings-status {
     display: flex;
     flex-direction: column;
@@ -135,6 +149,12 @@
         margin: 0rem 1rem;
       }
     }
+
+    .day-schedule-cards .class.wraper .buttons-container {
+      flex-direction: row;
+      align-self: flex-end;
+      width: 100%;
+    }
   }
 
   .day-schedule.card {
@@ -151,6 +171,7 @@
         width: 100%;
         text-align: center;
         margin: 0px;
+        margin-top: 1.2rem;
       }
     }
   }
@@ -162,7 +183,8 @@
     min-height: fit-content;
     margin: 2rem 0rem;
   }
-  .admin-clients{
+
+  .admin-clients {
     padding: 10px;
   }
 }
