--- a/public/styles/components/_subscriptions.scss
+++ b/public/styles/components/_subscriptions.scss
@@ -3,7 +3,8 @@
   justify-content: space-evenly;
   margin: 1rem;
   flex-wrap: wrap;
-
+ // width: 100%;
+  
   .color {
     width: 100%;
     height: 450px;
