--- a/public/styles/media.scss
+++ b/public/styles/media.scss
@@ -1,3 +1,14 @@
+@media(max-width: 1240px){
+  .home-content{
+    justify-content: center;
+    .content{
+      h1{
+        margin-top: 3rem;
+      }
+    }
+  }
+}
+
 @media (max-width: 1000px) {
   .admin-layout {
     width: 100%;
@@ -122,16 +133,24 @@
   }
 }
 
-@media(max-width: 411px) {
+@media(max-width: 420px) {
   .info{
     margin-right: 0px !important;
     border-right-style: solid;
     border-width: thin;
     border-color: #dadada;
+    
     div{
       flex-direction: column-reverse;
     }
   }
+  .button-home{
+    width: 100%;
+  }
+  .button-home.yellow{
+    margin-right: 0px;
+  }
+
   .subscription-card {
     width: 100%;
     padding: 1rem;
