--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Fauna+One&display=swap");
 html,
 body {
   color: #646262;
@@ -27,6 +28,36 @@ ul {
 
 .thin-text {
   font-weight: 300;
+}
+
+.button-home {
+  cursor: pointer;
+  border-style: solid;
+  border-width: thin;
+  border-radius: 5px;
+  padding: 17px 27px;
+  font-size: 20px;
+  border: 1px solid rgba(100, 98, 99, 0.64);
+  min-width: 200px;
+}
+
+.button-home.white {
+  background-color: white;
+  color: #646263;
+}
+
+.button-home.yellow {
+  background-color: #FFC67C;
+  color: white;
+  margin-right: 22px;
+}
+
+.button-home.yellow:hover {
+  background-color: #ffbc65;
+}
+
+.button-home.white:hover {
+  font-weight: bold;
 }
 
 .button-white {
@@ -1010,6 +1041,64 @@ header .navItem {
   margin: 0;
 }
 
+.home {
+  color: #3F7F9A;
+}
+.home .home-wraper,
+.home .social-contact-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 1.5rem;
+}
+.home .home-wraper.visit strong {
+  font-size: 22px;
+  font-weight: 500;
+}
+.home .home-wraper.visit p {
+  font-size: 18px;
+  font-style: italic;
+}
+.home .phone-container {
+  margin-bottom: 1.5em;
+}
+.home .phone {
+  font-size: 25px;
+  font-weight: 600;
+  color: #38718a;
+  margin-bottom: 1.5em;
+  margin-left: 0.5rem;
+  font-family: "Fauna One", serif;
+}
+.home .social-contact-container {
+  margin: 8rem 0rem;
+  margin-bottom: 10rem;
+}
+.home .social-icon {
+  color: #294f5f;
+}
+.home .home-content {
+  display: flex;
+  flex-wrap: wrap-reverse;
+  margin: 150px 0px;
+}
+.home .home-content .content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.home .home-content .content h1 {
+  margin-bottom: 0rem;
+}
+.home .home-content .content p {
+  max-width: 590px;
+  text-align: center;
+  font-size: 20px;
+  color: #89AAB8;
+  margin: 50px 0rem;
+  line-height: 28px;
+}
+
 .admin-bookings {
   display: flex;
   width: 100%;
@@ -1088,6 +1177,14 @@ header .navItem {
   text-align: center;
 }
 
+@media (max-width: 1240px) {
+  .home-content {
+    justify-content: center;
+  }
+  .home-content .content h1 {
+    margin-top: 3rem;
+  }
+}
 @media (max-width: 1000px) {
   .admin-layout {
     width: 100%;
@@ -1198,7 +1295,7 @@ header .navItem {
     margin: 0rem 1rem;
   }
 }
-@media (max-width: 411px) {
+@media (max-width: 420px) {
   .info {
     margin-right: 0px !important;
     border-right-style: solid;
@@ -1207,6 +1304,14 @@ header .navItem {
   }
   .info div {
     flex-direction: column-reverse;
+  }
+
+  .button-home {
+    width: 100%;
+  }
+
+  .button-home.yellow {
+    margin-right: 0px;
   }
 
   .subscription-card {
