main element class adjused

--- a/public/styles/components/_homePage.scss
+++ b/public/styles/components/_homePage.scss
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Fauna+One&display=swap');
 
-.home {
+.home-main {
     color: #3F7F9A;
 
     .home-wraper,
