--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1041,28 +1041,28 @@ header .navItem {
   margin: 0;
 }
 
-.home {
+.home-main {
   color: #3F7F9A;
 }
-.home .home-wraper,
-.home .social-contact-container {
+.home-main .home-wraper,
+.home-main .social-contact-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   margin-bottom: 1.5rem;
 }
-.home .home-wraper.visit strong {
+.home-main .home-wraper.visit strong {
   font-size: 22px;
   font-weight: 500;
 }
-.home .home-wraper.visit p {
+.home-main .home-wraper.visit p {
   font-size: 18px;
   font-style: italic;
 }
-.home .phone-container {
+.home-main .phone-container {
   margin-bottom: 1.5em;
 }
-.home .phone {
+.home-main .phone {
   font-size: 25px;
   font-weight: 600;
   color: #38718a;
@@ -1070,27 +1070,27 @@ header .navItem {
   margin-left: 0.5rem;
   font-family: "Fauna One", serif;
 }
-.home .social-contact-container {
+.home-main .social-contact-container {
   margin: 8rem 0rem;
   margin-bottom: 10rem;
 }
-.home .social-icon {
+.home-main .social-icon {
   color: #294f5f;
 }
-.home .home-content {
+.home-main .home-content {
   display: flex;
   flex-wrap: wrap-reverse;
   margin: 150px 0px;
 }
-.home .home-content .content {
+.home-main .home-content .content {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-.home .home-content .content h1 {
+.home-main .home-content .content h1 {
   margin-bottom: 0rem;
 }
-.home .home-content .content p {
+.home-main .home-content .content p {
   max-width: 590px;
   text-align: center;
   font-size: 20px;
