--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -11,5 +11,6 @@
 @import 'components/clientsDetails.scss';
 @import 'components/clientInfo.scss';
 @import 'components/adminBookingsPage.scss';
+@import 'components/clientAccountPage.scss';
 
 @import './media.scss';
