pie chart css fixes on admin client's panel

--- a/public/styles/base.scss
+++ b/public/styles/base.scss
@@ -59,7 +59,12 @@ ul {
 .button-home.white:hover{
   font-weight: bold;
 }
-
+svg > g > g:last-child { 
+  pointer-events: none 
+  }
+  #reactgooglegraph-1 svg{
+    overflow: visible !important;
+  }
 .button-white {
   padding: 0.8rem 1rem;
   text-align: center;
