--- a/public/styles/components/_clientAccountPage.scss
+++ b/public/styles/components/_clientAccountPage.scss
@@ -37,10 +37,10 @@
     div {
       display: flex;
       flex-direction: column;
-      align-items: center;
+      //align-items: center;
 
       p {
-        margin: 0 15px;
+       margin: 0 15px;
       }
 
       p:first-child {
