--- a/public/styles/components/_adminClassesLayout.scss
+++ b/public/styles/components/_adminClassesLayout.scss
@@ -4,7 +4,7 @@
   .chart-container {
     display: flex;
     justify-content: center;
-    padding: 1rem 0rem;
+    padding: 0 1rem;
   }
 
   .classes-header {
