--- a/public/styles/components/_subscriptions.scss
+++ b/public/styles/components/_subscriptions.scss
@@ -37,7 +37,7 @@
   background-color: white;
   box-shadow: -1px 0px 5px rgba(0, 0, 0, 0.25);
   border-radius: 29px;
-  padding: 3rem;
+  padding: 2rem;
   width: 400px;
   margin: 1rem;
 
@@ -77,8 +77,12 @@
     margin: 2rem 0rem;
   }
 
+  b{
+    color: #928bc8;
+    font-size: 30px;
+  }
   p {
-    text-align: center;
+    margin-left: 1rem;
   }
 
   .price {
