--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -406,7 +406,7 @@ header .navItem {
   background-color: white;
   box-shadow: -1px 0px 5px rgba(0, 0, 0, 0.25);
   border-radius: 29px;
-  padding: 3rem;
+  padding: 2rem;
   width: 400px;
   margin: 1rem;
 }
@@ -441,8 +441,12 @@ header .navItem {
   width: 100%;
   margin: 2rem 0rem;
 }
+.subscription-card b {
+  color: #928bc8;
+  font-size: 30px;
+}
 .subscription-card p {
-  text-align: center;
+  margin-left: 1rem;
 }
 .subscription-card .price {
   font-weight: bold;
