--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -13,5 +13,6 @@
 @import 'components/homePage.scss';
 @import 'components/adminBookingsPage.scss';
 @import 'components/clientAccountPage.scss';
+@import 'components/eventsPage.scss';
 
 @import './media.scss';
