--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -14,5 +14,6 @@
 @import 'components/adminBookingsPage.scss';
 @import 'components/clientAccountPage.scss';
 @import 'components/eventsPage.scss';
+@import 'components/statistics.scss';
 
 @import './media.scss';
