--- a/public/styles/components/_subscriptions.scss
+++ b/public/styles/components/_subscriptions.scss
@@ -40,6 +40,29 @@
   padding: 2rem;
   width: 400px;
   margin: 1rem;
+  height: fit-content;
+
+  .euro{
+    font-size: 23px;
+  }
+
+  .content{
+    width: 100%;
+
+    .percent{
+      font-size: 23px;
+    }
+  
+    .free{
+      font-size: 22px;
+      text-transform: uppercase;
+      letter-spacing: 2px;
+    }
+
+    h3{
+      letter-spacing: 1px;
+    }
+  }
 
   .dlt-button-white {
     padding: 0.6rem 0.8rem;
@@ -83,6 +106,7 @@
   }
   p {
     margin-left: 1rem;
+    font-size: 18px;
   }
 
   .price {
